// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AzureBoardsSettingsForm renders settings is null 1`] = `
<DocumentFragment>
  <mock-styledtextfieldbase
    aria-describedby="azure-boards-description"
    classname="issue-setting"
    label="Enter your Azure Boards project URL"
    value=""
  />
  <span
    class="textfield-description"
    id="azure-boards-description"
  >
    example: https://dev.azure.com/org/project
  </span>
  <mock-styleddropdownbase
    label="Select a field for issue details"
    options="[object Object],[object Object]"
    placeholder="Select an option"
  />
</DocumentFragment>
`;

exports[`AzureBoardsSettingsForm renders settings is null: StyledDropdownBase props 1`] = `
{
  "label": "Select a field for issue details",
  "onChange": [Function],
  "options": [
    {
      "key": "reproSteps",
      "text": "Repro steps",
    },
    {
      "key": "description",
      "text": "Description",
    },
  ],
  "placeholder": "Select an option",
  "selectedKey": null,
}
`;

exports[`AzureBoardsSettingsForm renders with projectUrl and issueDetailsField 1`] = `
<DocumentFragment>
  <mock-styledtextfieldbase
    aria-describedby="azure-boards-description"
    classname="issue-setting"
    label="Enter your Azure Boards project URL"
    value="some project URL"
  />
  <span
    class="textfield-description"
    id="azure-boards-description"
  >
    example: https://dev.azure.com/org/project
  </span>
  <mock-styleddropdownbase
    label="Select a field for issue details"
    options="[object Object],[object Object]"
    placeholder="Select an option"
    selectedkey="description"
  />
</DocumentFragment>
`;

exports[`AzureBoardsSettingsForm renders with projectUrl and issueDetailsField: StyledDropdownBase props 1`] = `
{
  "label": "Select a field for issue details",
  "onChange": [Function],
  "options": [
    {
      "key": "reproSteps",
      "text": "Repro steps",
    },
    {
      "key": "description",
      "text": "Description",
    },
  ],
  "placeholder": "Select an option",
  "selectedKey": "description",
}
`;
